--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "npm-path": "^2.0.4",
     "selenium-webdriver": "^4.0.0-alpha.1",
     "sleep-promise": "^5.1.0",
-    "chromedriver": "^2.37.0"
+    "chromedriver": "^2.37.0",
+    "mocha-junit-reporter":"1.17.0"
   }
 }
